<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
                name="names"
                type="com.example.tictactoe.Names"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".main" android:background="@drawable/mainpic">


        <Button
                android:text="@string/start_game"
                android:layout_width="280dp"
                android:layout_height="82dp" android:id="@+id/startbtn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.526"
                android:background="@drawable/th__1_" android:textSize="36sp" android:fontFamily="sans-serif-medium"
                android:layout_marginTop="120dp" app:layout_constraintTop_toBottomOf="@+id/button"
                app:layout_constraintBottom_toBottomOf="parent"/>


        <ScrollView
                android:layout_width="271dp"
                android:layout_height="197dp"
                app:layout_constraintBottom_toTopOf="@+id/button"
                app:layout_constraintStart_toStartOf="parent" android:id="@+id/scrollView2"
                android:layout_marginStart="100dp" android:background="@drawable/btnbg"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="100dp"
                app:layout_constraintTop_toBottomOf="@+id/textView3">
            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                          android:orientation="vertical">
                <TextView

                        android:text="@string/player_x"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" android:id="@+id/textView" android:textSize="24sp"
                        android:fontFamily="sans-serif-condensed-medium" android:textColor="@android:color/black"
                        android:textAlignment="center"
                />
                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:ems="10"
                        android:text="@={names.plyx}"
                        android:id="@+id/editText" android:hint="@string/your_name" android:autofillHints=""

                        android:textSize="18sp" android:textColor="@android:color/black"/>
                <TextView
                        android:text="@string/player_o"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/textView2" android:textSize="24sp"
                        android:textColor="@android:color/black" android:fontFamily="sans-serif-condensed-medium"
                        android:textAlignment="center"/>
                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:ems="10"
                        android:text="@={names.plyo}"
                        android:id="@+id/editText2" android:hint="@string/_2nd_player_name" android:autofillHints=""
                        android:textColor="@android:color/black"/>
                <Button
                        android:text="@string/done"
                        android:id="@+id/button10"
                        android:layout_gravity="center_horizontal"
                        style="@style/bts" android:background="@drawable/th__1_" android:layout_width="200dp"
                        android:layout_height="50dp" android:textSize="24sp"/>
            </LinearLayout>
        </ScrollView>
        <TextView
                android:text="@string/_2_players_game"
                android:layout_width="0dp"
                android:layout_height="77dp" android:id="@+id/textView3"
                android:layout_marginTop="37dp"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="50dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="50dp" app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.923" app:layout_constraintVertical_bias="0.0"
                android:background="@drawable/btnbg" android:textSize="30sp" android:textColor="@android:color/black"
                android:textAlignment="center" android:fontFamily="sans-serif-condensed-medium"/>
        <Button
                android:text="@string/rules"
                android:layout_width="150dp"
                android:layout_height="50dp" android:id="@+id/button"
                android:layout_marginTop="11dp"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="120dp"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="257dp" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="1.0"
                android:background="@drawable/th__1_" android:textSize="24sp"/>
        <ScrollView
                android:layout_width="400dp"
                android:layout_height="117dp" android:layout_marginTop="1dp"
                app:layout_constraintTop_toBottomOf="@+id/button" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="1dp" android:layout_marginEnd="10dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="30dp"
                app:layout_constraintBottom_toTopOf="@+id/startbtn" android:id="@+id/sv">
            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                          android:orientation="vertical">
                <TextView
                        android:text="@string/rule"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/textView4" android:textSize="18sp"
                        android:textColor="@android:color/black" android:textStyle="italic"
                        android:background="@drawable/btnbg" android:textAlignment="center"
                        android:layout_marginStart="20dp" android:layout_marginEnd="20dp"/>
            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>