<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".win" android:background="@drawable/th__3_">


        <TextView
                android:text="@string/congratulations"
                android:layout_width="315dp"
                android:layout_height="106dp" android:id="@+id/textView11"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="200dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="250dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="262dp" android:layout_marginBottom="639dp"
                app:layout_constraintBottom_toBottomOf="parent" android:textSize="36sp"
                android:textColor="@android:color/holo_red_dark" android:fontFamily="@font/roboto"
                android:textStyle="bold|italic"/>
        <TextView
                android:layout_width="234dp"
                android:layout_height="84dp" android:id="@+id/textView12"
                android:layout_marginTop="100dp"
                app:layout_constraintTop_toBottomOf="@+id/textView11" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="75dp" app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="455dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="75dp" android:textSize="36sp" android:textColor="@color/colorPrimaryDark"
                android:textAlignment="center"/>
        <TextView
                android:text="@string/won"
                android:layout_width="194dp"
                android:layout_height="89dp" android:id="@+id/textView13"
                android:layout_marginTop="100dp"
                app:layout_constraintTop_toBottomOf="@+id/textView12" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="150dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="150dp" android:layout_marginBottom="344dp"
                app:layout_constraintBottom_toBottomOf="parent" android:textSize="36sp"
                android:textColor="@color/colorPrimaryDark" android:textAlignment="center"
                android:fontFamily="sans-serif-condensed-medium"/>
        <TextView
                android:text="@string/draw"
                android:layout_width="264dp"
                android:layout_height="85dp" android:id="@+id/textView14"
                android:layout_marginTop="60dp"
                app:layout_constraintTop_toBottomOf="@+id/textView13" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="100dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="100dp" android:layout_marginBottom="198dp"
                app:layout_constraintBottom_toBottomOf="parent" android:textColor="@android:color/holo_red_dark"
                android:textSize="72sp" android:textAlignment="center"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>