<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".game3x3" android:background="@drawable/mainpic">

        <LinearLayout android:layout_height="wrap_content" android:layout_width="wrap_content"
                      android:orientation="horizontal" app:layout_constraintTop_toTopOf="parent"
                      app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="300dp"
                      android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
                      android:layout_marginEnd="16dp" style="@android:style/ButtonBar" android:id="@+id/linearLayout">
            <Button
                    android:layout_width="115dp"
                    android:layout_height="105dp" android:id="@+id/b1" tools:layout_editor_absoluteY="195dp"
                    tools:layout_editor_absoluteX="33dp" style="@android:style/ButtonBar"
                    android:background="@drawable/th__3_" android:textSize="72sp"/>
            <Button
                    android:layout_width="115dp"
                    android:layout_height="105dp" android:id="@+id/button2" tools:layout_editor_absoluteY="195dp"
                    tools:layout_editor_absoluteX="135dp" style="@android:style/ButtonBar"
                    android:background="@drawable/th__3_" android:textSize="72sp"/>
            <Button
                    android:layout_width="115dp"
                    android:layout_height="105dp" android:id="@+id/button3" tools:layout_editor_absoluteY="195dp"
                    tools:layout_editor_absoluteX="234dp" style="@android:style/ButtonBar"
                    android:background="@drawable/th__3_" android:textSize="72sp"/>
        </LinearLayout>
        <LinearLayout android:layout_height="wrap_content" android:layout_width="wrap_content"
                      android:orientation="horizontal" app:layout_constraintTop_toTopOf="parent"
                      app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="406dp"
                      android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
                      android:layout_marginEnd="16dp" style="@android:style/ButtonBar">
            <Button
                    android:layout_width="115dp"
                    android:layout_height="105dp" android:id="@+id/button4" tools:layout_editor_absoluteY="195dp"
                    tools:layout_editor_absoluteX="33dp" style="@android:style/ButtonBar"
                    android:background="@drawable/th__3_" android:textSize="72sp"/>
            <Button
                    android:layout_width="115dp"
                    android:layout_height="105dp" android:id="@+id/button5" tools:layout_editor_absoluteY="195dp"
                    tools:layout_editor_absoluteX="135dp" style="@android:style/ButtonBar"
                    android:background="@drawable/th__3_" android:textSize="72sp"/>
            <Button
                    android:layout_width="115dp"
                    android:layout_height="105dp" android:id="@+id/button6" tools:layout_editor_absoluteY="195dp"
                    tools:layout_editor_absoluteX="234dp" style="@android:style/ButtonBar"
                    android:background="@drawable/th__3_" android:textSize="72sp"/>
        </LinearLayout>
        <LinearLayout android:layout_height="wrap_content" android:layout_width="wrap_content"
                      android:orientation="horizontal" app:layout_constraintTop_toTopOf="parent"
                      app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="512dp"
                      android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
                      android:layout_marginEnd="16dp" style="@android:style/ButtonBar">
            <Button
                    android:layout_width="115dp"
                    android:layout_height="105dp" android:id="@+id/button7" tools:layout_editor_absoluteY="195dp"
                    tools:layout_editor_absoluteX="33dp" style="@android:style/ButtonBar"
                    android:background="@drawable/th__3_" android:textSize="72sp"/>
            <Button
                    android:layout_width="115dp"
                    android:layout_height="105dp" android:id="@+id/button8" tools:layout_editor_absoluteY="195dp"
                    tools:layout_editor_absoluteX="135dp" style="@android:style/ButtonBar"
                    android:background="@drawable/th__3_" android:textSize="72sp"/>
            <Button
                    android:layout_width="115dp"
                    android:layout_height="105dp" android:id="@+id/button9" tools:layout_editor_absoluteY="195dp"
                    tools:layout_editor_absoluteX="234dp" style="@android:style/ButtonBar"
                    android:background="@drawable/th__3_" android:textSize="72sp"/>
        </LinearLayout>
        <TextView

                android:layout_width="113dp"
                android:layout_height="40dp" android:id="@+id/textView5"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="59dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="35dp" android:layout_marginBottom="201dp"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="263dp" android:textSize="24sp" android:textColor="@android:color/black"
                android:textAlignment="center" android:background="@drawable/btnbg"/>
        <TextView

                android:layout_width="127dp"
                android:layout_height="39dp" android:id="@+id/textView6"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="63dp" android:layout_marginStart="66dp"
                app:layout_constraintStart_toEndOf="@+id/textView5" android:layout_marginBottom="198dp"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="35dp" android:textColor="@android:color/black" android:textSize="24sp"
                android:textAlignment="center" app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintVertical_bias="1.0" android:background="@drawable/btnbg"/>
        <TextView
                android:text="@string/player_xX"
                android:layout_width="93dp"
                android:layout_height="25dp" android:id="@+id/textView7"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="17dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="46dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="272dp" android:layout_marginBottom="17dp"
                app:layout_constraintBottom_toTopOf="@+id/textView5" android:textSize="18sp"
                android:textColor="@android:color/black" android:fontFamily="sans-serif-condensed-medium"/>
        <TextView
                android:text="@string/player_of"
                android:layout_width="93dp"
                android:layout_height="25dp" android:id="@+id/textView8"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="17dp" android:layout_marginBottom="17dp"
                app:layout_constraintBottom_toTopOf="@+id/textView6" app:layout_constraintStart_toEndOf="@+id/textView7"
                android:layout_marginStart="130dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="46dp" android:fontFamily="sans-serif-condensed-medium"
                android:textSize="18sp" android:textColor="@android:color/black"/>
        <TextView
                android:layout_width="100dp"
                android:layout_height="100dp" android:id="@+id/textView9"
                android:layout_marginTop="100dp"
                app:layout_constraintTop_toBottomOf="@+id/textView5" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="100dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="317dp" android:layout_marginBottom="169dp"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout" android:textColor="@color/colorPrimaryDark"
                android:textSize="72sp" android:textAlignment="center" android:background="@drawable/btnbg"/>
        <TextView
                android:layout_width="100dp"
                android:layout_height="100dp" android:id="@+id/textView10"
                android:layout_marginEnd="50dp" app:layout_constraintEnd_toEndOf="parent"
                android:textAlignment="center" android:textSize="72sp" android:textColor="@color/colorPrimaryDark"
                app:layout_constraintStart_toEndOf="@+id/textView9" android:layout_marginStart="114dp"
                android:layout_marginBottom="80dp" app:layout_constraintBottom_toTopOf="@+id/linearLayout"
                android:layout_marginTop="18dp" app:layout_constraintTop_toBottomOf="@+id/textView6"
                android:background="@drawable/btnbg"/>
        <Button
                android:text="@string/play_again"
                android:layout_width="170dp"
                android:layout_height="50dp" android:id="@+id/button11"
                android:layout_marginTop="17dp"
                app:layout_constraintTop_toBottomOf="@+id/textView9" android:layout_marginBottom="20dp"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="268dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="55dp" android:textSize="24sp" android:textColor="@android:color/black"
                android:background="@drawable/th__1_"/>
        <Button
                android:text="@string/quit"
                android:layout_width="150dp"
                android:layout_height="50dp" android:id="@+id/button12"
                android:layout_marginTop="14dp"
                app:layout_constraintTop_toBottomOf="@+id/textView10" android:layout_marginStart="100dp"
                app:layout_constraintStart_toEndOf="@+id/button11" android:layout_marginBottom="18dp"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="95dp" android:background="@drawable/th__1_"
                android:fontFamily="sans-serif-condensed-medium" android:textSize="30sp"
                android:textColor="@android:color/black"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>